--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,10 @@ exclude_match     = Hadoop-IO-0\.[0-9]+
 [Keywords]
 keywords = hadoop file format
 
+[EnsureNotStale]
+check_all_plugins = 1
+check_authordeps  = 1
+
 [AutoPrereqs]
 [Prereqs]
 perl                       = 5.010
