Update authors section

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,9 @@
 ; basic stuff
 name    = Hadoop-IO
-author  = Philippe Bruhat
+author = Philippe Bruhat
+author = Sabbir Ahmed
+author = Somesh Malviya
+author = Vikentiy Fesunov
 license = Perl_5
 copyright_holder = Booking.com
 copyright_year   = 2023
